--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">7 methods,   7 passed</span>
+                    <span class="method-stats">7 methods, 1 failed,   6 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="Live_testcases.StaleElement_Exp" class="method navigator-link" hash-for-method="waitExample">waitExample</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -123,17 +137,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Live_testcases.DataProviderTest" class="method navigator-link" hash-for-method="validLogin(1, chnirag)">validLogin(1, chnirag)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="Live_testcases.DataProviderTest" class="method navigator-link" hash-for-method="validLogin(2, patel)">validLogin(2, patel)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="Live_testcases.StaleElement_Exp" class="method navigator-link" hash-for-method="waitExample">waitExample</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="Live_testcases.DataProviderTest" class="method navigator-link" hash-for-method="validLogin(1, chnirag)">validLogin(1, chnirag)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -148,6 +157,45 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">Live_testcases.StaleElement_Exp</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="waitExample">
+                  </a> <!-- waitExample -->
+                  <span class="method-name">waitExample</span>
+                  <div class="stack-trace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//h3[contains(text(),&apos;Google AI&apos;)]&quot;}
+  (Session info: chrome=138.0.7204.158)
+For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception
+Build info: version: &apos;4.34.0&apos;, revision: &apos;707dcb4246*&apos;
+System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;21.0.4&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [888b4b499939715400b034b5f588d6e7, findElement {using=xpath, value=//h3[contains(text(),&apos;Google AI&apos;)]}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 138.0.7204.158, chrome: {chromedriverVersion: 138.0.7204.168 (3e8d82e86e9..., userDataDir: C:\Users\DELLEN~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:50821}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:50821/devtoo..., se:cdpVersion: 138.0.7204.158, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Session ID: 888b4b499939715400b034b5f588d6e7
+	at org.openqa.selenium.remote.ErrorCodec.decode(ErrorCodec.java:167)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:138)
+	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:50)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:215)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:216)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:174)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:544)
+	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:165)
+	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:59)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:367)
+	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:361)
+	at Live_testcases.StaleElement_Exp.waitExample(StaleElement_Exp.java:52)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1596)
+... Removed 28 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -196,21 +244,6 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Live_testcases.StaleElement_Exp</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="waitExample">
-                  </a> <!-- waitExample -->
-                  <span class="method-name">waitExample</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">Live_testcases.AccessibilityTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -231,18 +264,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validLogin(1, chnirag)">
-                  </a> <!-- validLogin(1, chnirag) -->
-                  <span class="method-name">validLogin</span>
-                  <span class="parameters">(1,chnirag)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="validLogin(2, patel)">
                   </a> <!-- validLogin(2, patel) -->
                   <span class="method-name">validLogin</span>
                   <span class="parameters">(2,patel)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validLogin(1, chnirag)">
+                  </a> <!-- validLogin(1, chnirag) -->
+                  <span class="method-name">validLogin</span>
+                  <span class="parameters">(1,chnirag)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -315,27 +348,27 @@ data.addRows(7);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'AccessibilityCheck')
 data.setCell(0, 2, 'Live_testcases.AccessibilityTest')
-data.setCell(0, 3, 17177);
+data.setCell(0, 3, 24218);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Edureka')
-data.setCell(1, 2, 'Live_testcases.EdurekaLogin')
-data.setCell(1, 3, 12588);
+data.setCell(1, 1, 'FaceBookServiceDirectory')
+data.setCell(1, 2, 'Live_testcases.CountCountry')
+data.setCell(1, 3, 8534);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'FaceBookServiceDirectory')
-data.setCell(2, 2, 'Live_testcases.CountCountry')
-data.setCell(2, 3, 7798);
+data.setCell(2, 1, 'Redfflogin')
+data.setCell(2, 2, 'Live_testcases.RediffValidation')
+data.setCell(2, 3, 8070);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Redfflogin')
-data.setCell(3, 2, 'Live_testcases.RediffValidation')
-data.setCell(3, 3, 5944);
+data.setCell(3, 1, 'Edureka')
+data.setCell(3, 2, 'Live_testcases.EdurekaLogin')
+data.setCell(3, 3, 7061);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'waitExample')
 data.setCell(4, 2, 'Live_testcases.StaleElement_Exp')
-data.setCell(4, 3, 3922);
+data.setCell(4, 3, 5178);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'validLogin')
 data.setCell(5, 2, 'Live_testcases.DataProviderTest')
-data.setCell(5, 3, 2);
+data.setCell(5, 3, 6);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'validLogin')
 data.setCell(6, 2, 'Live_testcases.DataProviderTest')
@@ -344,7 +377,7 @@ window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 53 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -355,6 +388,28 @@ return data;
             <span class="header-content">Reporter output for Suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">validLogin(2, patel)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Username =2</span>
+                <span class="reporter-method-output">Passowrd =patel</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">validLogin(1, chnirag)</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Username =1</span>
+                <span class="reporter-method-output">Passowrd =chnirag</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Redfflogin</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Username = chiragpatel@infosystechnologies.com</span>
+                <span class="reporter-method-output">Password = SoftwareTestingHead</span>
+                <span class="reporter-method-output">button name = Log In</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">FaceBookServiceDirectory</span>
               <div class="reporter-method-output-div">
@@ -571,28 +626,6 @@ return data;
                 <span class="reporter-method-output">Total links=210</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">validLogin(1, chnirag)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Username =1</span>
-                <span class="reporter-method-output">Passowrd =chnirag</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">validLogin(2, patel)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Username =2</span>
-                <span class="reporter-method-output">Passowrd =patel</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">Redfflogin</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Username = chiragpatel@infosystechnologies.com</span>
-                <span class="reporter-method-output">Password = SoftwareTestingHead</span>
-                <span class="reporter-method-output">button name = Log In</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
@@ -618,39 +651,41 @@ return data;
               <div class="chronological-class-name">Live_testcases.CountCountry</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">FaceBookServiceDirectory</span>
-                <span class="method-start">17184 ms</span>
+                <span class="method-start">24235 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Live_testcases.DataProviderTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">validLogin(1, chnirag)</span>
-                <span class="method-start">24988 ms</span>
+                <span class="method-start">32780 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">validLogin(2, patel)</span>
-                <span class="method-start">24991 ms</span>
+                <span class="method-start">32789 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Live_testcases.EdurekaLogin</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Edureka</span>
-                <span class="method-start">24993 ms</span>
+                <span class="method-start">32795 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Live_testcases.RediffValidation</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Redfflogin</span>
-                <span class="method-start">37585 ms</span>
+                <span class="method-start">39859 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Live_testcases.StaleElement_Exp</div> <!-- chronological-class-name -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">waitExample</span>
-                <span class="method-start">43533 ms</span>
+                <span class="method-start">47933 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
