Stable version commited

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,442</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">24,075</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">basic.Flipkart</td><td><a href="#m0">software</a></td><td rowspan="1">1753290627870</td><td rowspan="1">5369</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">basic.ArrayNumber</td><td><a href="#m0">ArrayResult</a></td><td rowspan="1">1753292496394</td><td rowspan="1">7634</td></tr><tr class="passedodd"><td rowspan="1">basic.Dummy</td><td><a href="#m1">Testcheckbox</a></td><td rowspan="1">1753292504040</td><td rowspan="1">5232</td></tr><tr class="passedeven"><td rowspan="1">basic.Flipkart</td><td><a href="#m2">software</a></td><td rowspan="1">1753292509275</td><td rowspan="1">5231</td></tr><tr class="passedodd"><td rowspan="1">basic.Java_set_map</td><td><a href="#m3">setExample</a></td><td rowspan="1">1753292514513</td><td rowspan="1">6</td></tr><tr class="passedeven"><td rowspan="1">basic.RadioButton_Facebook</td><td><a href="#m4">webElementCommandDemo</a></td><td rowspan="1">1753292514527</td><td rowspan="1">5870</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">basic.Flipkart#software</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">basic.ArrayNumber#ArrayResult</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">basic.Dummy#Testcheckbox</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">basic.Flipkart#software</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">basic.Java_set_map#setExample</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">basic.RadioButton_Facebook#webElementCommandDemo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
