--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,27 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="basic.ArrayNumber" class="method navigator-link" hash-for-method="ArrayResult">ArrayResult</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="basic.Dummy" class="method navigator-link" hash-for-method="Testcheckbox">Testcheckbox</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="basic.Java_set_map" class="method navigator-link" hash-for-method="setExample">setExample</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Suite" title="basic.Flipkart" class="method navigator-link" hash-for-method="software">software</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="basic.RadioButton_Facebook" class="method navigator-link" hash-for-method="webElementCommandDemo">webElementCommandDemo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -133,6 +153,66 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">basic.RadioButton_Facebook</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="webElementCommandDemo">
+                  </a> <!-- webElementCommandDemo -->
+                  <span class="method-name">webElementCommandDemo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">basic.ArrayNumber</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="ArrayResult">
+                  </a> <!-- ArrayResult -->
+                  <span class="method-name">ArrayResult</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">basic.Dummy</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="Testcheckbox">
+                  </a> <!-- Testcheckbox -->
+                  <span class="method-name">Testcheckbox</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">basic.Java_set_map</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="setExample">
+                  </a> <!-- setExample -->
+                  <span class="method-name">setExample</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -146,8 +226,34 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;password&quot; value=&quot;mypassword&quot;/&gt;
     &lt;parameter name=&quot;uname&quot; value=&quot;software@qa.com&quot;/&gt;
+    &lt;packages&gt;
+      &lt;package name=&quot;basic&quot;/&gt;
+    &lt;/packages&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;basic.ArrayNumber&quot;/&gt;
+      &lt;class name=&quot;basic.BaseTest&quot;/&gt;
+      &lt;class name=&quot;basic.BrowserCommandExample&quot;/&gt;
+      &lt;class name=&quot;basic.Checkin&quot;/&gt;
+      &lt;class name=&quot;basic.CommonFunctions&quot;/&gt;
+      &lt;class name=&quot;basic.Dummy&quot;/&gt;
+      &lt;class name=&quot;basic.Example1&quot;/&gt;
+      &lt;class name=&quot;basic.Figona_series&quot;/&gt;
       &lt;class name=&quot;basic.Flipkart&quot;/&gt;
+      &lt;class name=&quot;basic.Java_set_map&quot;/&gt;
+      &lt;class name=&quot;basic.RadioButton_Facebook&quot;/&gt;
+      &lt;class name=&quot;basic.WriteintoExcel&quot;/&gt;
+      &lt;class name=&quot;basic.ArrayNumber&quot;/&gt;
+      &lt;class name=&quot;basic.BaseTest&quot;/&gt;
+      &lt;class name=&quot;basic.BrowserCommandExample&quot;/&gt;
+      &lt;class name=&quot;basic.Checkin&quot;/&gt;
+      &lt;class name=&quot;basic.CommonFunctions&quot;/&gt;
+      &lt;class name=&quot;basic.Dummy&quot;/&gt;
+      &lt;class name=&quot;basic.Example1&quot;/&gt;
+      &lt;class name=&quot;basic.Figona_series&quot;/&gt;
+      &lt;class name=&quot;basic.Flipkart&quot;/&gt;
+      &lt;class name=&quot;basic.Java_set_map&quot;/&gt;
+      &lt;class name=&quot;basic.RadioButton_Facebook&quot;/&gt;
+      &lt;class name=&quot;basic.WriteintoExcel&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -161,7 +267,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (1 class)</span>
+                <span class="test-name">Test (24 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -187,16 +293,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'software')
-data.setCell(0, 2, 'basic.Flipkart')
-data.setCell(0, 3, 5369);
+data.setCell(0, 1, 'ArrayResult')
+data.setCell(0, 2, 'basic.ArrayNumber')
+data.setCell(0, 3, 7634);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'webElementCommandDemo')
+data.setCell(1, 2, 'basic.RadioButton_Facebook')
+data.setCell(1, 3, 5870);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'Testcheckbox')
+data.setCell(2, 2, 'basic.Dummy')
+data.setCell(2, 3, 5232);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'software')
+data.setCell(3, 2, 'basic.Flipkart')
+data.setCell(3, 3, 5231);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'setExample')
+data.setCell(4, 2, 'basic.Java_set_map')
+data.setCell(4, 3, 6);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -222,10 +344,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">basic.ArrayNumber</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">ArrayResult</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">basic.Dummy</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Testcheckbox</span>
+                <span class="method-start">7646 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">basic.Flipkart</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">software</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">12881 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">basic.Java_set_map</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">setExample</span>
+                <span class="method-start">18119 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">basic.RadioButton_Facebook</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">webElementCommandDemo</span>
+                <span class="method-start">18133 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
